tests/paczka1/fuzzy1/50939621.err
Error in line 2: mdsYLlT A272 28,8
Error in line 10: A272 A272 99,6
Error in line 17: A272 A499 85,1
Error in line 28: JUbK A272 13,0
